--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,26 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<scmCommentPrefix>[ci skip]</scmCommentPrefix>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<arguments>-Prelease</arguments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<scm>
+		<url>https://github.com/DatavenueLiveObjects/Sigfox-Live-Objects-connector.git</url>
+		<connection>scm:git:${project.scm.url}</connection>
+		<developerConnection>scm:git:${project.scm.url}</developerConnection>
+		<tag>v1.0</tag>
+	</scm>
 	<profiles>
 		<profile>
 			<id>release</id>
