New version of FIFO SDK, Spring Boot, and other libraries. Actuator for health check. Standardized connector application class name.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,14 @@ spring:
     password: password
     driverClassName: org.h2.Driver
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
 
 lo:
   hostname: liveobjects.orange-business.com
